--- a/style.css
+++ b/style.css
@@ -1,57 +1,74 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: sans-serif;
+body {
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
+                  url("../../media/examples/lizard.png");
+                  
+    background-size: cover; /* E mbulon gjithë faqen */
+    background-repeat: no-repeat; /* Parandalon përsëritjen e imazhit */
+    background-position: center; /* E qendron imazhin në mes */
 }
-.container{
-    height: 100vh;
-    background-image: url(bookshelf.jpg);
-}
-.text-section{
-    width: 50%;
-    height: 100vh;
-    padding: 30px;
-    background-color: #e3dddd;
-    clip-path: polygon(0 0, 80% 0, 100% 30%, 80% 100%, 0 100%);
-}
-.nav{
-    width: 30%;
-    margin: 50px;
+
+/* Kontejneri kryesor i faqes */
+.container {
     display: flex;
-    gap: 70px;
-    
+    justify-content: flex-start;
+    padding: 20px;
+    height: 100vh;
+    align-items: center;
 }
-.nav a{
+
+/* Përmbajtja e tekstit në të majtë */
+.text-content {
+    max-width: 40%; /* Kufizon gjerësinë e tekstit */
+    text-align: left;
+}
+
+/* Navigimi */
+.nav {
+    display: flex;
+    justify-content: flex-end;
+    gap: 40px;
+    margin-bottom: 30px;
+}
+
+.nav a {
     text-decoration: none;
-    color: black;
+    color: rgb(15, 64, 4);
+    font-weight: bold;
+    font-size: 1em;
+    padding: 15px;
+    margin-bottom: 130px;
 }
-.text-section h1{
+
+/* Stili për titullin */
+.text-content h1 {
+    font-size: 3em;
     color: rgb(2, 68, 2);
-    margin: 40px;
-    margin-top: 100px;
-    font-size: 50px;
     font-weight: lighter;
+    margin-bottom: 50px;
 }
 
-.text-section p{
-    width: 50%;
-    text-wrap: wrap;
-    margin: 40px;
-    margin-top: 80px;
+/* Stili për paragrafët */
+.text-content p {
+    font-size: 1.2em;
     font-style: italic;
-    font-weight: lighter;
-    line-height: 1.5;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 50px;
 }
 
-.text-section button{
-    margin: 40px;
-    padding: 10px;
-    border-radius: 20px;
-    width: 130px;
-    border-color: rgb(222, 121, 6) ;
-    background-color: rgb(222, 121, 6);
+/* Stili për butonin */
+.text-content button {
+    padding: 10px 20px;
+    border-radius: 150px;
+    background-color: rgb(15, 64, 4);
     color: #fff;
+    border: none;
     cursor: pointer;
+    font-size: 1em;
+}
 
+/* Imazhi në të djathtë */
+.right-image {
+    width: 35%; /* Bëni imazhin më të vogël */
+    margin-left: 180px; /* Hapësirë ndërmjet imazhit dhe tekstit */
 }
