--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
-                  url("../../media/examples/lizard.png");
+                  url("");
     
     background-size: cover;
     background-repeat: no-repeat; 
