--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 body {
     background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
                   url("");
@@ -10,27 +11,28 @@ body {
 
 .container {
     display: flex;
-    justify-content: flex-start;
-    padding: 20px;
+    margin-left: 50px;
+    padding: 10px;
     height: 100vh;
     align-items: center;
+    
 }
 
 
 .text-content {
-    max-width: 40%; 
+    width: 100%; 
+    height: 100%;
     text-align: left;
 }
 
 
-.nav {
+.links {
     display: flex;
-    justify-content: flex-end;
-    gap: 40px;
-    margin-bottom: 30px;
+    gap: 45px;
+    margin: 30px;
 }
 
-.nav a {
+.links a {
     text-decoration: none;
     color: rgb(15, 64, 4);
     font-weight: bold;
@@ -45,6 +47,7 @@ body {
     color: rgb(2, 68, 2);
     font-weight: lighter;
     margin-bottom: 50px;
+    margin-left: 30px;
 }
 
 
@@ -54,6 +57,9 @@ body {
     line-height: 1.6;
     color: #555;
     margin-bottom: 50px;
+    width: 65%;
+    margin-left: 30px;
+    margin-top: 10%;
 }
 
 
@@ -65,10 +71,49 @@ body {
     border: none;
     cursor: pointer;
     font-size: 1em;
+    margin-left: 30px;
 }
 
 
 .right-image {
-    width: 35%; 
-    margin-left: 180px; 
+    width: 35%;
+    margin-right: 10%; 
+}
+
+.footer-info{
+    display: flex;
+    width: 100%;
+    color: #555;
+    margin-top: 50px;
+
+}
+.left-side{
+    width: 30%;
+    margin-left: 2%;
+}
+.left-side a{
+    display: flex;
+    text-decoration: none;
+    font-size: 1em;
+    margin-bottom: 15px;
+    color: #555;
+    margin-left: 20px;
+}
+
+.middle-side{
+    width: 33%;
+    
+}
+.middle-side p{
+    width: 70%;
+}
+
+.right-side{
+    width: 33%;
+    margin-right: 2%;
+}
+.email{
+    padding: 7px;
+    width: 40%;
+    border-radius: 4px;
 }
