--- a/style.css
+++ b/style.css
@@ -1,5 +1,11 @@
 
-body {
+*{
+    padding: 0;
+    margin: 0;
+
+
+}
+.first-page{
     background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
                   url("");
     
@@ -12,7 +18,7 @@ body {
 .container {
     display: flex;
     margin-left: 50px;
-    padding: 10px;
+    margin-bottom: 20px;
     height: 100vh;
     align-items: center;
     
@@ -85,6 +91,7 @@ body {
     width: 100%;
     color: #555;
     margin-top: 50px;
+    height: 40vh;
 
 }
 .left-side{
@@ -95,7 +102,7 @@ body {
     display: flex;
     text-decoration: none;
     font-size: 1em;
-    margin-bottom: 15px;
+    margin-top: 15px;
     color: #555;
     margin-left: 20px;
 }
@@ -116,4 +123,51 @@ body {
     padding: 7px;
     width: 40%;
     border-radius: 4px;
+}
+.header{
+    background-color: aliceblue;
+    width: 100%;
+    height: 100vh;
+}
+.header-links {
+    display: flex;
+    gap: 45px;
+    padding: 30px;
+    margin-left: 50px;
+}
+
+.header-links a {
+    text-decoration: none;
+    color: rgb(15, 64, 4);
+    font-weight: bold;
+    font-size: 1em;
+    padding: 15px;
+    margin-bottom: 130px;
+}
+
+.about-us{
+    width: 100%;
+    margin-left: 30px;
+    
+}
+.about-us h1{
+    font-size: 3em;
+    color: rgb(2, 68, 2);
+    font-weight: lighter;
+    margin-bottom: 50px;
+    margin-left: 30px;
+}
+.about-us p{
+    font-size: 1.2em;
+    font-style: italic;
+    line-height: 1.6;
+    color: #555;
+    margin-bottom: 50px;
+    width: 50%;
+    margin-left: 30px;
+    margin-top: 5%;
+}
+.bookshelf-img img{
+    width: 20%;
+    
 }
