--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@
 
 .links a {
     text-decoration: none;
-    color: rgb(15, 64, 4);
+    color: rgb(12, 49, 4);
     font-weight: bold;
     font-size: 1em;
     padding: 15px;
@@ -50,7 +50,8 @@
 
 .text-content h1 {
     font-size: 3em;
-    color: rgb(2, 68, 2);
+    font-style: italic;
+    color: rgb(2, 48, 2);
     font-weight: lighter;
     margin-bottom: 50px;
     margin-left: 30px;
@@ -61,7 +62,7 @@
     font-size: 1.2em;
     font-style: italic;
     line-height: 1.6;
-    color: #555;
+    color: #021e0b;
     margin-bottom: 50px;
     width: 65%;
     margin-left: 30px;
@@ -71,15 +72,14 @@
 
 .text-content button {
     padding: 10px 20px;
-    border-radius: 150px;
-    background-color: rgb(15, 64, 4);
-    color: #fff;
+    border-radius: 15px;
+    background-color: beige; 
+    color: rgb(0, 48, 2); 
     border: none;
     cursor: pointer;
     font-size: 1em;
     margin-left: 30px;
-}
-
+  }
 
 .right-image {
     width: 35%;
@@ -89,7 +89,7 @@
 .footer-info{
     display: flex;
     width: 100%;
-    color: #555;
+    color: rgb(2, 48, 2);
     margin-top: 50px;
     height: 40vh;
 
@@ -97,33 +97,45 @@
 .left-side{
     width: 30%;
     margin-left: 2%;
+    font-style: italic;
+    color: rgb(2, 48, 2);
 }
 .left-side a{
     display: flex;
     text-decoration: none;
+    font-style: italic;
     font-size: 1em;
     margin-top: 15px;
-    color: #555;
+    color: #022c01;
     margin-left: 20px;
 }
 
 .middle-side{
     width: 33%;
+    font-style: italic;
+    color: rgb(2, 48, 2);
     
 }
 .middle-side p{
+    font-style: italic;
+    color: rgb(2, 48, 2);
     width: 70%;
 }
 
 .right-side{
     width: 33%;
     margin-right: 2%;
+    font-style: italic;
+    color: rgb(2, 48, 2);
 }
 .email{
     padding: 7px;
     width: 40%;
     border-radius: 4px;
+    background-color: beige;
+    font-style: italic;
 }
+/*second page :ABOUT US*/
 .header{
     background-color: aliceblue;
     width: 100%;
@@ -134,6 +146,7 @@
     gap: 45px;
     padding: 30px;
     margin-left: 50px;
+    background-color: aliceblue;
 }
 
 .header-links a {
@@ -152,7 +165,8 @@
 }
 .about-us h1{
     font-size: 3em;
-    color: rgb(2, 68, 2);
+    font-style: italic;
+    color: rgb(1, 43, 1);
     font-weight: lighter;
     margin-bottom: 50px;
     margin-left: 30px;
@@ -161,13 +175,23 @@
     font-size: 1.2em;
     font-style: italic;
     line-height: 1.6;
-    color: #555;
+    color: #032c02;
     margin-bottom: 50px;
     width: 50%;
     margin-left: 30px;
     margin-top: 5%;
 }
-.bookshelf-img img{
-    width: 20%;
+.image-container {
+    text-align: right; 
+    margin-right: 50px; 
+    margin-bottom: 100%;
+  }
+  
+  img {
     
-}
+    max-width: 300px; 
+    height: auto;
+    width: 35%;
+    margin-right: 10%;
+  }
+   
