--- a/style.css
+++ b/style.css
@@ -135,63 +135,105 @@
     background-color: beige;
     font-style: italic;
 }
+
 /*second page :ABOUT US*/
-.header{
-    background-color: aliceblue;
+
+body {
+    
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+  }
+  
+  
+  .header {
+    
+    
     width: 100%;
     height: 100vh;
+    margin-bottom: 5%;
 }
-.header-links {
+  
+  
+  .header-links {
     display: flex;
     gap: 45px;
     padding: 30px;
-    margin-left: 50px;
-    background-color: aliceblue;
-}
-
-.header-links a {
+    margin-left: 15px;
+  }
+  
+  .header-links a {
     text-decoration: none;
     color: rgb(15, 64, 4);
     font-weight: bold;
     font-size: 1em;
     padding: 15px;
-    margin-bottom: 130px;
-}
-
-.about-us{
+    
+  }
+  
+  
+  
+  .about-us {
     width: 100%;
-    margin-left: 30px;
+    padding-top: 5%;
+    
+  }
+  
+  .about-container {
+    flex: 1; 
+    padding-right: 80px; 
+  }
+  
+  .about-container h1 {
+    font-size: 2em;
+    font-style: italic;
+    margin-bottom: 20px;
+    color: rgb(2, 48, 2);
+    font-weight: lighter;
     
 }
-.about-us h1{
-    font-size: 3em;
-    font-style: italic;
-    color: rgb(1, 43, 1);
-    font-weight: lighter;
-    margin-bottom: 50px;
-    margin-left: 30px;
-}
-.about-us p{
+  
+  
+  .about-container p {
     font-size: 1.2em;
     font-style: italic;
     line-height: 1.6;
-    color: #032c02;
+    color: rgb(2, 48, 2);
     margin-bottom: 50px;
     width: 50%;
-    margin-left: 30px;
-    margin-top: 5%;
-}
-.image-container {
-    text-align: right; 
-    margin-right: 50px; 
-    margin-bottom: 100%;
+    margin-left: 20px;
+    
   }
   
-  img {
+  
+  .image-container {
+
+    width: auto;
+    text-align: right; 
+    margin-top: -43%;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
     
-    max-width: 300px; 
-    height: auto;
-    width: 35%;
-    margin-right: 10%;
+    
+    
+    
   }
+  
+  .image-container img {
+    max-width: 25%; 
+    height: 10pc;
+    border: 10px ;
+    border-radius: 20px;
+    margin-bottom: 100px;
+    width: 35%;
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover; 
+    
+    
+    
+  }
+  
    
