--- a/login.css
+++ b/login.css
@@ -1,102 +1,113 @@
-* {
-    box-sizing: border-box;
-    margin: 20;
+@import url('https://fonts.googleapis.com/css2?family=poppins:wght@300;400;500;600;700;800;900&display=swap');
+
+*{
+    margin: 0;
     padding: 0;
+    box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
 }
 
-body {
-    font-family: Arial, sans-serif;
-    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+body{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    min-height: 100vh;
+    background: linear-gradient(90deg, #e2e2e2, #c9d6ff);
 }
 
-.login-container {
-    background-color: #fff;
-    width: 100%;
-    max-width: 500px;
-    padding: 50px;
-    border-radius: 10px;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
-    text-align: center;
-}
-
-h2 {
-    margin-bottom: 40px;
-    color: #1a202c;
-    
-}
-
-p {
-    margin-bottom: 20px;
-    color: #718096;
-    font-size: 14px;
-    
-}
-
-.input-group {
-    margin-bottom: 15px;
+.container{
     position: relative;
-    margin-right: 10px;
+    width: 850px;
+    height: 550px;
+    background: #fff;
+    border-radius: 30px;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .2);
 }
 
-.input-group input {
-    width: 100%;
-    padding: 10px 40px;
-    font-size: 14px;
-    border:  solid #e2e8f0;
-    border-radius: 10px;
-    background-color: #f7fafc;
-    color: #1a202c;
-    outline: none;
-}
-
-.toggle-password {
+.form-box{
     position: absolute;
-    top: 50%;
-    right: 10px;
-    transform: translateY(-50%);
-    cursor: pointer;
-    color: #a0aec0;
+    right: 0;
+    width: 50%;
+    height: 100%;
+    background: seagreen;
+    display: flex;
+    align-items: center;
+    color: #333;
+    text-align: center;
+    padding: 40px;
 }
 
-.remember {
-    text-align: left;
-    font-size: 14px;
-    color: #718096;
-    margin-bottom: 20px;
-}
-
-button {
+form{
     width: 100%;
-    padding: 10px;
-    background-color: rgb(63, 53, 101);
-    color: white;
+}
+
+.containcer h1{
+    font-size: 36px;
+    margin: -10px 0;
+}
+
+.input-box{
+    position: relative;
+    margin: 30px 0;
+}
+
+.input-box input{
+    width: 100%;
+    padding: 13px 50px 13px 20px;
+    background: #eee;
+    border-radius: 8px;
     border: none;
-    padding: 12px;
+    outline: none;
     font-size: 16px;
-    cursor: pointer;
-    border-radius: 10px;
-    
+    color: #333;
+    font-weight: 500;
 }
 
-button:hover {
-    background-color: #cccf7f;
+.input-box input::placeholder{
+    color: #888;
+    font-weight: 400;
 }
 
-.signup-text {
-    margin-top: 15px;
-    font-size: 14px;
-    color: #718096;
+.input-box i{
+    position: absolute;
+    right: 20px;
+    top: 50%;
+    transform: translateY(-50);
+    font-size: 20px;
+    color: #888;
 }
-
-.signup-text a {
-    color: rgb(63, 53, 101);
+.forgot-link{
+    margin: -15px 0 15px;
+}
+.forgot-link a{
+    font-size: 14.5px;
+    color: #333;
     text-decoration: none;
 }
 
-.signup-text a:hover {
-    text-decoration: underline;
+.btn{
+    width: 100%;
+    height: 48px;
+    background: #7494ec;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #fff;
+    font-weight: 600;
+}
+
+.containcer p{
+    font-size: 14.5px;
+    margin: 15px 0;
+}
+.social-icons a{
+    display: inline-flex;
+    padding: 10px;
+   
+    font-size: 24px;
+    color: #333;
+    text-decoration: none;
+    margin: 0 8px;
 }
