--- a/login.css
+++ b/login.css
@@ -8,8 +8,8 @@
 }
 
 body{
-    background-color: #c9d6ff;
-    background: linear-gradient(to right, #e2e2e2, #c9d6ff);
+    
+    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
     display: flex;
     align-items: center;
     justify-content: center;
@@ -20,7 +20,7 @@ body{
 .container{
     background-color: #fff;
     border-radius: 30px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.35);
+    box-shadow: 0 5px 15px rgb(84, 24, 144);
     position: relative;
     overflow: hidden;
     width: 768px;
@@ -47,7 +47,7 @@ body{
 }
 
 .container button{
-    background-color: #512da8;
+    background-color: #7762aa;
     color: #fff;
     font-size: 12px;
     padding: 10px 45px;
@@ -161,9 +161,9 @@ body{
 }
 
 .toggle{
-    background-color: #512da8;
+    background-color: #7762aa;
     height: 100%;
-    background: linear-gradient(to right, #5c6bc0, #512da8);
+    background: #7762aa;
     color: #fff;
     position: relative;
     left: -100%;
@@ -172,7 +172,6 @@ body{
     transform: translateX(0);
     transition: all 0.6s ease-in-out;
 }
-
 .container.active .toggle{
     transform: translateX(50%);
 }
