--- a/style.css
+++ b/style.css
@@ -5,19 +5,23 @@
 
 
 }
-body{
-  background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
-                  url("");
-}
-.first-page{
-    /* background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)),
-                  url(""); */
+body {
     
-    background-size: cover;
-    background-repeat: no-repeat; 
-    background-position: center; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+  background-size: cover;
+  background-repeat: no-repeat; 
+  background-position: center; 
 }
 
+
+.first {
+  width: 100%;
+  height: 100vh;
+  margin-bottom: 5%;
+}
 
 .container {
     display: flex;
@@ -29,31 +33,77 @@ body{
 }
 
 
+.links{
+  display: flex;
+  gap: 45px;
+  padding: 30px;
+  margin-left: px;
+}
+
+.links > a {
+  text-decoration: none;
+  color: rgb(15, 64, 4);
+  font-weight: bold;
+  font-size: 1em;
+  padding: 15px;
+  
+}
+
+
+.links > a:hover{
+  color: bisque;
+  text-decoration: underline;
+}
+
+
+
+.icons{
+    position: absolute; 
+    top: 10px; 
+    right: 2%; 
+    display: flex;  
+    align-items: center; 
+    gap: 10px;
+
+}
+.icons > a {
+  text-decoration: none;
+  color: #333; 
+  font-size: 24px; 
+}
+.icons > p {
+  margin: 0;
+  font-size: 16px;
+  color: #333; 
+  border: 1px;
+  border-radius: 20px;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.icons p:hover{
+    text-decoration: underline;
+}
+
+a.icons_login {
+  margin-left: 10px;
+  font-size: 20px;
+}
+
+.content{
+  width: 100%;
+    padding-top: 9%;
+    flex: 1; 
+    margin-right: 80px; 
+}
 .text-content {
-    width: 100%; 
-    height: 100%;
-    text-align: left;
+  width: 100%; 
+  height: 100%;
+  text-align: left;
 }
-
-
-.links {
-    display: flex;
-    gap: 45px;
-    margin: 30px;
-}
-
-.links a {
-    text-decoration: none;
-    color: rgb(12, 49, 4);
-    font-weight: bold;
-    font-size: 1em;
-    padding: 15px;
-    margin-bottom: 130px;
-}
-
 
 .text-content h1 {
-    font-size: 3em;
+    font-size: 4.5em;
     color: rgb(2, 48, 2);
     font-weight: lighter;
     margin-bottom: 40px;
@@ -61,32 +111,52 @@ body{
 }
 
 
-.text-content p {
-    font-size: 1.2em;
+.text-content .content p {
+    font-size: 1.3em;
     line-height: 1.6;
     color: #021e0b;
     margin-bottom: 50px;
-    width: 65%;
+    width: 75%;
     margin-left: 30px;
-    margin-top: 10%;
+    margin-top: 7%;
     font-style: italic;
 }
 
 
 .text-content button {
-    padding: 10px 20px;
-    border-radius: 15px;
+    padding: 15px 50px;
+    border-radius: 25px;
     background-color: beige; 
     color: rgb(0, 48, 2); 
     border: none;
     cursor: pointer;
-    font-size: 1em;
+    font-size: 1.4em;
     margin-left: 30px;
+    
+  }
+
+  .text-content .learn-more {
+    padding: 15px 50px;
+    border-radius: 25px;
+    background-color: beige; 
+    color: rgb(0, 48, 2); 
+    border: none;
+    cursor: pointer;
+    font-size: 1.4em;
+    margin-left: 30px;
+    text-decoration: none;
+  }
+
+  button:hover{
+    background-color: bisque;
+    color: black;
+    font-weight: bolder;
   }
 
 .right-image {
-    width: 35%;
+    width: 33%;
     margin-right: 10%; 
+    margin-top: 5%;
 }
 
 .footer-info{
@@ -181,6 +251,10 @@ body {
     font-size: 1em;
     padding: 15px;
     
+  }
+  .header-links a:hover{
+    color: bisque;
+    text-decoration: underline;
   }
   
   
