--- a/style.css
+++ b/style.css
@@ -10,13 +10,11 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+  background: linear-gradient(to right, beige 25%, #c3a27a 50%);
   background-size: cover;
   background-repeat: no-repeat; 
   background-position: center; 
 }
-
-
 .first {
   width: 100%;
   height: 100vh;
@@ -103,7 +101,7 @@ a.icons_login {
 }
 
 .text-content h1 {
-    font-size: 4.5em;
+    font-size: 3em;
     color: rgb(2, 48, 2);
     font-weight: lighter;
     margin-bottom: 40px;
@@ -126,7 +124,7 @@ a.icons_login {
 .text-content button {
     padding: 15px 50px;
     border-radius: 25px;
-    background-color: beige; 
+    background-color: c3a2; 
     color: rgb(0, 48, 2); 
     border: none;
     cursor: pointer;
@@ -136,19 +134,19 @@ a.icons_login {
   }
 
   .text-content .learn-more {
-    padding: 15px 50px;
+    padding: 15px 40px;
     border-radius: 25px;
-    background-color: beige; 
+    background-color: #c3a27a; 
     color: rgb(0, 48, 2); 
     border: none;
     cursor: pointer;
-    font-size: 1.4em;
+    font-size: 1.2em;
     margin-left: 30px;
     text-decoration: none;
   }
 
   button:hover{
-    background-color: bisque;
+    background-color: #c3a27a;
     color: black;
     font-weight: bolder;
   }
@@ -223,7 +221,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-image: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5));
+    background: linear-gradient(to right, beige 25%, #c3a27a 50%);
     background-size: cover;
     background-repeat: no-repeat; 
     background-position: center; 
