--- a/books.css
+++ b/books.css
@@ -64,6 +64,11 @@ body{
     color: black;
     
 }
+a.icons_login {
+    margin-left: 10px;
+    font-size: 20px;
+}
+
 .search-bar{
     width: 100%;
     height: 20%;
