--- a/style.css
+++ b/style.css
@@ -1,386 +1,292 @@
-*{
-    padding: 0;
-    margin: 0;
-    
-
-
+* {
+  padding: 0;
+  margin: 0;
 }
 body {
-    
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background: linear-gradient(to right, beige 25%, #c3a27a 50%);
   background-size: cover;
-  background-repeat: no-repeat; 
-  background-position: center; 
+  background-repeat: no-repeat;
+  background-position: center;
 }
-.first {
+
+.home {
   width: 100%;
-  height: 100vh;
-  margin-bottom: 5%;
 }
 
 .container {
-    display: flex;
-    margin-left: 50px;
-    margin-bottom: 20px;
-    height: 100vh;
-    align-items: center;
-    
+  padding: 0 40px;
 }
 
-
-.links{
-  display: flex;
-  gap: 45px;
-  padding: 30px;
-  margin-left: px;
-}
-
-.links > a {
-  text-decoration: none;
-  color: rgb(15, 64, 4);
-  font-weight: bold;
-  font-size: 1em;
-  padding: 15px;
-  
-}
-
-
-.links > a:hover{
-  color: bisque;
-  text-decoration: underline;
-}
-
-
-
-.icons{
-    position: absolute; 
-    top: 10px; 
-    right: 2%; 
-    display: flex;  
-    align-items: center; 
-    gap: 10px;
-
-}
-.icons > a {
-  text-decoration: none;
-  color: #333; 
-  font-size: 24px; 
-}
-.icons > p {
-  margin: 0;
-  font-size: 16px;
-  color: #333; 
-  border: 1px;
-  border-radius: 20px;
-  font-size: 18px;
-  cursor: pointer;
-}
-
-.icons p:hover{
-    text-decoration: underline;
-}
-
-a.icons_login {
-  margin-left: 10px;
-  font-size: 20px;
-}
-
-.content{
+.content {
   width: 100%;
-    padding-top: 9%;
-    flex: 1; 
-    margin-right: 80px; 
+  flex: 1;
+  margin-right: 80px;
 }
+
 .text-content {
-  width: 100%; 
-  height: 100%;
-  text-align: left;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .text-content h1 {
-    font-size: 3em;
-    color: rgb(2, 48, 2);
-    font-weight: lighter;
-    margin-bottom: 40px;
-    margin-left: 30px;
+  font-size: 3em;
+  color: rgb(2, 48, 2);
+  font-weight: lighter;
+  margin-bottom: 40px;
+  margin-left: 30px;
 }
-
 
 .text-content .content p {
-    font-size: 1.3em;
-    line-height: 1.6;
-    color: #021e0b;
-    margin-bottom: 50px;
-    width: 75%;
-    margin-left: 30px;
-    margin-top: 7%;
-    font-style: italic;
+  font-size: 1.3em;
+  line-height: 1.6;
+  color: #021e0b;
+  margin-bottom: 50px;
+  width: 75%;
+  margin-left: 30px;
+  margin-top: 7%;
 }
-
 
 .text-content button {
-    padding: 15px 50px;
-    border-radius: 25px;
-    background-color: c3a2; 
-    color: rgb(0, 48, 2); 
-    border: none;
-    cursor: pointer;
-    font-size: 1.4em;
-    margin-left: 30px;
-    
-  }
+  padding: 15px 50px;
+  border-radius: 25px;
+  background-color: c3a2;
+  color: rgb(0, 48, 2);
+  border: none;
+  cursor: pointer;
+  font-size: 1.4em;
+  margin-left: 30px;
+}
 
-  .text-content .learn-more {
-    padding: 15px 40px;
-    border-radius: 25px;
-    background-color: #c3a27a; 
-    color: rgb(0, 48, 2); 
-    border: none;
-    cursor: pointer;
-    font-size: 1.2em;
-    margin-left: 30px;
-    text-decoration: none;
-  }
+.text-content .learn-more {
+  padding: 15px 40px;
+  border-radius: 25px;
+  background-color: #c3a27a;
+  color: white;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2em;
+  margin-left: 30px;
+  text-decoration: none;
+  text-transform: uppercase;
+}
 
-  button:hover{
-    background-color: #c3a27a;
-    color: black;
-    font-weight: bolder;
-  }
+button:hover {
+  background-color: #c3a27a;
+  color: black;
+  font-weight: bolder;
+}
 
 .right-image {
-    width: 33%;
-    margin-right: 10%; 
-    margin-top: 5%;
+  width: 500px;
 }
 
-.footer-info{
-    display: flex;
-    width: 100%;
-    color: rgb(2, 48, 2);
-    margin-top: 50px;
-    height: 40vh;
-    font-family: sans-serif;
-
-}
-.left-side{
-    width: 34%;
-    margin-left: 2%;
-    color: rgb(2, 48, 2);
-    font-style: italic;
-}
-.left-side a{
-    display: flex;
-    text-decoration: none;
-    font-size: 1em;
-    margin-top: 15px;
-    color: #022c01;
-    margin-left: 20px;
+.footer {
+  margin: 40px 0 20px 0;
 }
 
-.middle-side{
-    width: 20%;
-    color: rgb(2, 48, 2);
-    line-height: 23px;
-    margin-right: 100px;
-    font-style: italic;
-    
+.footer-info {
+  display: flex;
+  width: 100%;
+  color: rgb(2, 48, 2);
+  margin-top: 50px;
+  font-family: sans-serif;
 }
-.middle-side p{
-    color: rgb(2, 48, 2);
-    margin-top: 35px;
+.left-side {
+  width: 34%;
+  margin-left: 2%;
+  color: rgb(2, 48, 2);
+}
+.left-side a {
+  display: flex;
+  text-decoration: none;
+  font-size: 1em;
+  margin-top: 10px;
+  color: #022c01;
 }
 
-.right-side{
-    width: 35%;
-    margin-right: 2%;
-    margin-left: 90px;
-    color: rgb(2, 48, 2);
-    line-height: 23px;
-    font-style: italic;
+.left-side a:first-of-type {
+  margin-top: 20px;
 }
-.right-side p{
+
+.middle-side {
+  width: 20%;
+  color: rgb(2, 48, 2);
+  line-height: 23px;
+  margin-right: 100px;
+}
+.middle-side p {
+  color: rgb(2, 48, 2);
+  margin-top: 35px;
+}
+
+.right-side {
+  width: 35%;
+  margin-right: 2%;
+  margin-left: 90px;
+  color: rgb(2, 48, 2);
+  line-height: 23px;
+}
+.right-side p {
   margin: 10px 0px;
-  font-style: italic;
 }
-.email{
-    padding: 7px;
-    width: 40%;
-    border-radius: 4px;
-    background-color: beige;
-    font-style: italic;
+.email {
+  padding: 7px;
+  width: 40%;
+  border-radius: 4px;
+  background-color: beige;
+  border: 1px solid black;
+  outline: none;
 }
 
 /*second page :ABOUT US*/
 
 body {
-    
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    background: linear-gradient(to right, beige 25%, #c3a27a 50%);
-    background-size: cover;
-    background-repeat: no-repeat; 
-    background-position: center; 
-  }
-  
-  
-  .about {
-    width: 100%;
-    height: 100vh;
-    margin-bottom: 5%;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: linear-gradient(to right, beige 25%, #c3a27a 50%);
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
 }
-  
-  
-  .header-links {
-    display: flex;
-    gap: 45px;
-    padding: 30px;
-    margin-left: 50px;
-  }
-  
-  .header-links a {
-    text-decoration: none;
-    color: rgb(15, 64, 4);
-    font-weight: bold;
-    font-size: 1em;
-    padding: 15px;
-    
-  }
-  .header-links a:hover{
-    color: bisque;
-    text-decoration: underline;
-  }
-  
-  
-  .about-container {
-    width: 100%;
-    padding-top: 5%;
-    flex: 1; 
-    margin-right: 80px; 
-  }
-  
-  .about-container h1 {
-    font-size: 3em;
-    color: rgb(2, 48, 2);
-    font-weight: lighter;
-    margin-bottom: 40px;
-    margin-left: 5%;
-    font-size: 40px;
-    
+
+.about {
+  width: 100%;
+  height: 100vh;
 }
-  
-  
-  .about-container p {
-    font-size: 1.1em;
-    font-style: italic;
-    line-height: 1.4;
-    color: rgb(2, 48, 2);
-    margin-bottom: 50px;
-    width: 45%;
-    margin-left: 5%;
-    
-  }
-  
-  
-  .first-image {
-    width: auto;
-    text-align: right; 
-    margin-top: -30%;
-    width: 90%; 
-    height: 100%; 
-    object-fit: cover; 
-  
-  }
-  
-  .first-image img {
-   
-    border: 10px ;
-    border-radius: 20px;
-    width: 20%; 
-    height: 100%; 
-    object-fit: cover; 
-  }
-  
 
-  .second-about{
-    display: flex;
-    margin-top: 10%;
-  }
-  .second-image{
-    width: auto;
-    text-align: right; 
-    margin-top: -13%;
-    margin-left: -7%;
-    width: 50%;  
-    object-fit: cover;
-  }
-  .second-image img{
-    border: 10px ;
-    border-radius: 20px;
-    width: 60%; 
-    height: 80%;
-    object-fit: cover;
-  }
-
-  .second-about-container{
-    width: 100%;
-    margin-left: 10%;
-  }
-  .second-about-container h1{
-    font-size: 3em;
-    margin-top: -20%;
-    color: rgb(2, 48, 2);
-    font-weight: lighter;
-    margin-bottom: 40px;
-    font-size: 40px;
-  }
-  .second-about-container p{
-    font-size: 1.1em;
-    font-style: italic;
-    line-height: 1.4;
-    color: rgb(2, 48, 2);
-    margin-bottom: 50px;
-    width: 70%;
-  }
-
-
-
-  .third-about-container {
-    width: 100%;
-    height: 80vh;
-    margin-top: 5%;
-    flex: 1; 
-    margin-right: 80px; 
-  }
-  
-  .third-about-container h1 {
-    font-size: 3em;
-    color: rgb(2, 48, 2);
-    font-weight: lighter;
-    margin-bottom: 40px;
-    margin-left: 5%;
-    font-size: 40px;
-    
+.header-links {
+  display: flex;
+  gap: 45px;
+  padding: 30px;
+  margin-left: 50px;
 }
-  
-  
-  .third-about-container p {
-    font-size: 1.1em;
-    font-style: italic;
-    line-height: 1.4;
-    color: rgb(2, 48, 2);
-    margin-bottom: 50px;
-    width: 45%;
-    margin-left: 5%;
-    
-  }
-  
-  
-  /* .third-image {
+
+.header-links a {
+  text-decoration: none;
+  color: rgb(15, 64, 4);
+  font-weight: bold;
+  font-size: 1em;
+  padding: 15px;
+}
+.header-links a:hover {
+  color: bisque;
+  text-decoration: underline;
+}
+
+.about-container {
+  width: 100%;
+  padding-top: 8%;
+  flex: 1;
+  margin-right: 80px;
+}
+
+.about-container h1 {
+  font-size: 3em;
+  color: rgb(2, 48, 2);
+  font-weight: lighter;
+  margin-bottom: 40px;
+  margin-left: 5%;
+  font-size: 40px;
+}
+
+.about-container p {
+  font-size: 1.1em;
+  line-height: 1.4;
+  color: rgb(2, 48, 2);
+  margin-bottom: 50px;
+  width: 45%;
+  margin-left: 5%;
+}
+
+.first-image {
+  width: auto;
+  text-align: right;
+  margin-top: -30%;
+  width: 90%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.first-image img {
+  border: 10px;
+  border-radius: 20px;
+  width: 20%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.second-about {
+  display: flex;
+  margin-top: 10%;
+}
+.second-image {
+  width: auto;
+  text-align: right;
+  margin-top: -13%;
+  margin-left: -7%;
+  width: 50%;
+  object-fit: cover;
+}
+.second-image img {
+  border: 10px;
+  border-radius: 20px;
+  width: 60%;
+  height: 80%;
+  object-fit: cover;
+}
+
+.second-about-container {
+  width: 100%;
+  margin-left: 10%;
+}
+.second-about-container h1 {
+  font-size: 3em;
+  margin-top: -20%;
+  color: rgb(2, 48, 2);
+  font-weight: lighter;
+  margin-bottom: 40px;
+  font-size: 40px;
+}
+.second-about-container p {
+  font-size: 1.1em;
+  line-height: 1.4;
+  color: rgb(2, 48, 2);
+  margin-bottom: 50px;
+  width: 70%;
+}
+
+.third-about-container {
+  width: 100%;
+  height: 80vh;
+  margin-top: 5%;
+  flex: 1;
+  margin-right: 80px;
+}
+
+.third-about-container h1 {
+  font-size: 3em;
+  color: rgb(2, 48, 2);
+  font-weight: lighter;
+  margin-bottom: 40px;
+  margin-left: 5%;
+  font-size: 40px;
+}
+
+.third-about-container p {
+  font-size: 1.1em;
+  line-height: 1.4;
+  color: rgb(2, 48, 2);
+  margin-bottom: 50px;
+  width: 45%;
+  margin-left: 5%;
+}
+
+/* .third-image {
     text-align: right; 
      margin-top: -40%; 
     width: 90%;  
@@ -388,14 +294,13 @@ body {
 }
 */
 
-  
-  .third-image img {
-    float: right;
-    margin-top: -43%;
-    margin-right: 10%;
-    border: 10px ;
-    border-radius: 20px;
-    width: 20%; 
-    height: 100%; 
-    object-fit: cover; 
-  }
+.third-image img {
+  float: right;
+  margin-top: -43%;
+  margin-right: 10%;
+  border: 10px;
+  border-radius: 20px;
+  width: 20%;
+  height: 100%;
+  object-fit: cover;
+}
