--- a/books.css
+++ b/books.css
@@ -249,3 +249,23 @@ body {
 .footer {
   margin: 40px 0 20px 0;
 }
+
+.alert {
+  min-width: 250px;
+  padding: 10px 20px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+  background-color: #999999;
+  color: #fff;
+  font-size: 16px;
+}
+
+.alert.success {
+  background-color: green;
+}
+
+.alert.error {
+  background-color: orangered;
+}
