--- a/style.css
+++ b/style.css
@@ -304,3 +304,23 @@ body {
   height: 100%;
   object-fit: cover;
 }
+
+.alert {
+  min-width: 250px;
+  padding: 10px 20px;
+  position: fixed;
+  top: 10px;
+  right: 10px;
+  z-index: 9999;
+  background-color: #999999;
+  color: #fff;
+  font-size: 16px;
+}
+
+.alert.success {
+  background-color: green;
+}
+
+.alert.error {
+  background-color: orangered;
+}
