--- a/books.css
+++ b/books.css
@@ -92,7 +92,7 @@ body {
 }
 
 .featured-books .featured-book-box .featured-book-card .featured-book-img img {
-  width: 150px;
+  width: 100%;
   height: 230px;
   margin: 0 auto;
 }
@@ -136,6 +136,7 @@ body {
   .featured-book-card
   .featured-book-tag
   .f-btn {
+  display: block;
   padding: 8px 20px;
   border: 2px solid #1d420e;
   text-decoration: none;
